# codal-esp8266

./: CMakeLists.txt
inc/: spi_interface.h
source/: gpio16.c  hw_timer.c  i2c_master.c  key.c  sdio_slv.c  spi.c  spi_interface.c  spi_overlap.c  uart.c
